@@ -2,6 +2,7 @@
 
 = 3.6.0 - 2022-xx-xx =
 * Fix UPE validation error visibility on checkout page.
+* Add - Add support for full transaction exports.
 
 = 3.5.0 - 2021-12-29 =
 * Fix - Error when renewing subscriptions with saved payment methods disabled.
